<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.QuestionsActivity">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="top|center"
        android:padding="16dp">

        <TextView
            android:id="@+id/question_text"
            android:textSize="25sp"
            android:gravity="center"
            android:text="@string/question"
            android:textStyle="normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/image_flag"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:contentDescription="@string/image_flag"
            tools:src="@drawable/nigeria_flag"
            android:layout_marginTop="50dp"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10"
            android:orientation="horizontal">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_marginTop="15dp"
                android:max="10"
                android:minHeight="50dp"
                android:indeterminate="false"
                tools:progress="9"/>

            <TextView
                android:id="@+id/text_view_progress"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:textSize="15sp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="0/10"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
        <TextView
            android:id="@+id/text_option_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            tools:text="Option 1"
            android:background="@drawable/default_option_border_bg"
            android:textColor="@android:color/darker_gray"
            android:textStyle="normal"
            android:layout_marginTop="10dp"
            android:minHeight="50dp"/>

        <TextView
            android:id="@+id/text_option_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            tools:text="Option 2"
            android:background="@drawable/default_option_border_bg"
            android:textColor="@android:color/darker_gray"
            android:textStyle="normal"
            android:layout_marginTop="10dp"
            android:minHeight="50dp"/>

        <TextView
            android:id="@+id/text_option_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            tools:text="Option 3"
            android:background="@drawable/default_option_border_bg"
            android:textColor="@android:color/darker_gray"
            android:textStyle="normal"
            android:layout_marginTop="10dp"
            android:minHeight="50dp"/>

        <TextView
            android:id="@+id/text_option_four"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            tools:text="Option 4"
            android:background="@drawable/default_option_border_bg"
            android:textColor="@android:color/darker_gray"
            android:textStyle="normal"
            android:layout_marginTop="10dp"
            android:minHeight="50dp"/>


        <Button
            android:layout_marginTop="10dp"
            android:id="@+id/button_checked"
            android:text="@string/check"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:minHeight="50dp"
            android:layout_height="wrap_content"/>



    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>